--- a/src/main.scss
+++ b/src/main.scss
@@ -12,26 +12,25 @@ ul,li{
 	padding:0;
 }
 .container{
+    position: fixed; 
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 	width: 774px;
-	height: 350px;
+	height: 302px;
 	border: 2px solid red;
-	margin: 0 auto;
-	top: 50%;
-	left: 50%;
-	margin-top: 175px;
-	margin-left: 350px;	
 }
 
 .abacus-list{
 	margin: 0 auto;
-	height: 350px;
+	height: 252px;
 	width: 774px;
 	position: relative;
 }
 
 .ab-item{
 	width: 110px;
-	height: 348px;
+	height: 252px;
 	position: relative;
 	display: inline-block;
 }
@@ -47,7 +46,7 @@ ul,li{
 
 .down-beads-container{
 	width: 110px;
-	height: 248px;
+	height: 200px;
 	border-top: 3px solid green;
 	overflow: hidden;
 	position: relative;
@@ -62,7 +61,7 @@ ul,li{
 }
 
 .down-vertical-pole{
-	height: 245px;
+	height: 205px;
 }
 
 .upbead{
@@ -73,6 +72,18 @@ ul,li{
 	left: 25%;
 	top: 0;
 	position: absolute;
+	display: block;
+}
+.upbeaddown{
+	width: 60px;
+	height: 40px;
+	border-radius: 50%;
+	background: purple;
+	left: 25%;
+	
+	position: absolute;
+	display: block;
+	bottom: 0;
 }
 
 .downbead{
@@ -83,6 +94,7 @@ ul,li{
 	background: purple;
 	margin-left: 25%;
 	border-radius: 50%;
+
 }
 
 .downbead:nth-child(1){
