add clear function

--- a/src/main.scss
+++ b/src/main.scss
@@ -118,3 +118,41 @@ footer{
 	bottom: 40px;
 
 }
+
+
+h1{
+  display:inline-block;
+  vertical-align: middle;
+
+}
+header{
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom:20px;
+}
+.pannel{
+  vertical-align: middle;
+  margin-left: 90px;
+  display:inline-block;
+  clear: both;
+
+  width: 100px;
+  height: 100px;
+  button{
+    width: 110px;
+    height: 40px;
+    margin: 5px 0;
+    border: none;
+    outline: none;
+    background: white;
+    color: #24292e;
+    font-size: 15px;
+
+    transition: .5s;
+  }
+  button:hover{
+    background: #24292e;
+    color:white;
+    outline: 1px solid white;
+  }
+}
